# PlanIt

./: .gitignore  README.md  commit_message.txt  eslint.config.mjs  latest.json  latest.template.json  next.config.mjs  package.json  pnpm-lock.yaml  temp.txt  tsconfig.json
.github/workflows/: build-mac.yml  deploy-website.yml
PlanIt-OfficialWebsite/: next.config.mjs
PlanIt-OfficialWebsite/app/: globals.css  layout.tsx  page.tsx
PlanIt-OfficialWebsite/components/: analytics-reveal.tsx  analytics-transition.tsx  animated-section.tsx  download-section.tsx  download-transition.tsx  features-showcase.tsx  footer.tsx  header.tsx  hero-section.tsx  (+2 more)
app/: globals.css  layout.tsx  page.tsx
components/: app-icon.tsx  disable-context-menu.tsx  dynamic-title.tsx  nav-bar.tsx  platform-provider.tsx  store-provider.tsx  task-delete-dialog.tsx  task-modal.tsx  update-dialog.tsx  update-provider.tsx  widget-store-provider.tsx
docs/: UPDATER_SETUP.md
hooks/: use-adaptive-layout.ts  use-toast.ts
lib/: colors.ts  config.ts  history-manager.ts  i18n.ts  notifications.ts  platform.ts  pomodoro-context.tsx  pomodoro-hooks.ts  sound.ts  store.ts  task-layout.ts  task-utils.ts  types.ts  updater.ts  use-page-visibility.ts  version.ts  widget-layout-manager.ts  widget-registry.ts  widget-store.ts  widget-types.ts
scripts/: generate-latest-json.js  sync-version.js  update-windows-sig.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keyboard_hook.rs  lib.rs  main.rs
types/: tauri.d.ts
(+88 files in other folders)
